@@ -1,3 +1,6 @@
+	* Improved catch2 adapter with better messages for non-fatal expectation
+	  violations.
+
 v41 2021-06-15
 
 	* catch2 adapter works with CATCH_CONFIG_PREFIX_ALL.
